src/objects/CPA_Queries__c.object
<CustomObject>
    <description>This object stores queries regarding Vendor contract management.</description>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <picklist>
            <picklistValues>
                <fullName>SMT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ULPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPA_Project_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PWO Query</label>
        <referenceTo>CPA_project_work_order__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_ID__c</fullName>
        <formula>LookupCR_Query__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_creator__c</fullName>
        <description>This field created to capture query creator.</description>
        <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLE_ID__c</fullName>
        <formula>HLE_Request_Query__r.HLE_Request_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HLE ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLE_Request_Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This capture queries related to HLE Request.</description>
        <label>HLE Request Query</label>
        <referenceTo>CPA_HLE_Request__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_ID__c</fullName>
        <formula>LookupLOI_Query__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupCR_Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This capture queries related to CR contract.</description>
        <label>CR Query</label>
        <referenceTo>CPA_CR__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LookupLOI_Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This captures queries related to LOI contract.</description>
        <label>LOI Query</label>
        <referenceTo>CPA_LOI__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LookupPWORF_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It associates queries with PWORF.</description>
        <inlineHelpText>Choose PWORF to raise queries against it.</inlineHelpText>
        <label>PWORF Name</label>
        <referenceTo>CPA_PWORF__c</referenceTo>
        <relationshipName>CPA_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lookup_Project_Work_Order_Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Work Order</label>
        <referenceTo>CPA_project_work_order__c</referenceTo>
        <relationshipLabel>Project Work Order Queries</relationshipLabel>
        <relationshipName>ProjectWorkOrderQueries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PWO_ID__c</fullName>
        <formula>CPA_Project_Work_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PWO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Work_Order_ID__c</fullName>
        <formula>Lookup_Project_Work_Order_Query__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Work Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pworf_ID__c</fullName>
        <formula>LookupPWORF_Name__r.auto_PWORF_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pworf ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTXTQuery_Description__c</fullName>
        <description>It shows query description regarding vendor contract management.</description>
        <inlineHelpText>It shows query description regarding vendor contract management.</inlineHelpText>
        <label>Query Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_Of_Query__c</fullName>
        <inlineHelpText>Please Select Type of Query</inlineHelpText>
        <label>Type Of Query</label>
        <picklist>
            <picklistValues>
                <fullName>Query</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to Withhold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eml_SMT_group_email__c</fullName>
        <label>SMT group email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_VDM_group_email__c</fullName>
        <label>VDM group email</label>
        <type>Email</type>
    </fields>
    <label>Queries</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_CPA_Queries</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_Queries</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_CPA_Queries</fullName>
        <filterScope>Queue</filterScope>
        <label>SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_ULFT_CPA_Queries</fullName>
        <filterScope>Queue</filterScope>
        <label>ULFT</label>
        <queue>CPA_ULFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_ULPT_CPA_Queries</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPT</label>
        <queue>CPA_ULPT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>